# pytest-issues

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  LICENSE  README.md  poe-tasks.toml  pyproject.toml
.github/: dependabot.yml
.github/workflows/: build.yml  publish-pypi.yml  review.yml
docs/: conf.py  index.rst  install.rst
docs/project/: contributing.rst  license.rst  release-notes.rst
docs/usage/: api.rst  install.rst  quickstart.rst  user-guide.rst
src/pytest_issues/: __init__.py  _messages.py  typing.py
src/pytest_issues/_core/: __init__.py  raises.py  warns.py
src/pytest_issues/_decorators/: raises.py  warns.py
tests/: conftest.py  test_examples.py  test_messages.py
tests/_core/: test_raises.py  test_warns.py
tests/_decorators/: test_raises.py  test_warns.py
